--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,9 @@
     "mongoose": "^8.1.0",
     "nodemon": "^3.1.0",
     "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21"
   }
 }
